hs-bindgen/fixtures/macro_in_fundecl.rs

/* automatically generated by rust-bindgen 0.70.1 */

extern "C" {
    pub fn quux(x: f32, y: ::std::os::raw::c_char) -> ::std::os::raw::c_char;
}
extern "C" {
    pub fn wam(x: f32, y: *mut ::std::os::raw::c_char) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn foo1(
        x: f32,
        g: ::std::option::Option<
            unsafe extern "C" fn(arg1: ::std::os::raw::c_int) -> ::std::os::raw::c_int,
        >,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn foo2(
        x: f32,
        g: ::std::option::Option<
            unsafe extern "C" fn(arg1: ::std::os::raw::c_int) -> ::std::os::raw::c_int,
        >,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn foo3(
        x: f32,
        g: ::std::option::Option<
            unsafe extern "C" fn(arg1: ::std::os::raw::c_int) -> ::std::os::raw::c_int,
        >,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn bar1(
        x: ::std::os::raw::c_long,
    ) -> ::std::option::Option<
        unsafe extern "C" fn(x: ::std::os::raw::c_short) -> ::std::os::raw::c_int,
    >;
}
extern "C" {
    pub fn bar2(
        x: ::std::os::raw::c_long,
    ) -> ::std::option::Option<
        unsafe extern "C" fn(x: ::std::os::raw::c_short) -> ::std::os::raw::c_int,
    >;
}
extern "C" {
    pub fn bar3(
        x: ::std::os::raw::c_long,
    ) -> ::std::option::Option<
        unsafe extern "C" fn(x: ::std::os::raw::c_short) -> ::std::os::raw::c_int,
    >;
}
extern "C" {
    pub fn bar4(
        x: ::std::os::raw::c_long,
    ) -> ::std::option::Option<
        unsafe extern "C" fn(x: ::std::os::raw::c_short) -> ::std::os::raw::c_int,
    >;
}
extern "C" {
    pub fn baz1(
        i: ::std::os::raw::c_int,
    ) -> *mut [[::std::os::raw::c_int; 3usize]; 2usize];
}
extern "C" {
    pub fn baz2(
        i: ::std::os::raw::c_int,
    ) -> *mut [[::std::os::raw::c_int; 3usize]; 2usize];
}
extern "C" {
    pub fn baz3(
        i: ::std::os::raw::c_int,
    ) -> *mut [[::std::os::raw::c_int; 3usize]; 2usize];
}
extern "C" {
    pub fn no_args_no_void() -> ::std::os::raw::c_int;
}
